--- a/app/src/main/res/layout/fragment_achievements_page.xml
+++ b/app/src/main/res/layout/fragment_achievements_page.xml
@@ -6,14 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".achievementsPage">
 
+    <Button
+        android:id="@+id/backToProfilePageButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
     <TextView
         android:id="@+id/achievementsTitle"
+        android:layout_below="@id/backToProfilePageButton"
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Achievements"
@@ -195,4 +210,16 @@
 
     </LinearLayout>
 
+
+    <Button
+        android:id="@+id/editAchievementsPageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="650dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:text="UPDATE NEW PROGRESS"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/white"
+         />
 </RelativeLayout>
