--- a/app/src/main/res/layout/fragment_frech_toast_recipe_details_page.xml
+++ b/app/src/main/res/layout/fragment_frech_toast_recipe_details_page.xml
@@ -415,10 +415,9 @@
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/calorieCounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/hello_blank_fragment"
             android:src="@drawable/ic_baseline_white_plus_sign_24"
 
             app:layout_anchor="@id/bottomAppBar" />
