--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pastel_red">#DF9882</color>
+    <color name="grey">#686868</color>
+    <color name="light_grey">#AAA8A8</color>
+    <color name="light_pitch">#E7A18B</color>
+
 </resources>
