--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -57,17 +57,17 @@
         android:id="@+id/optionsButton"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="320dp"
         android:layout_marginTop="50dp"
-        android:drawableLeft="@drawable/ic_black_options"
-        android:textAlignment="center"
         android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_black_options"
         android:fontFamily="@font/poppins_semibold"
+        android:textAlignment="center"
         android:textSize="14sp"
-        />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/name"
