--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="grey">#686868</color>
     <color name="light_grey">#AAA8A8</color>
     <color name="light_pitch">#E7A18B</color>
+    <color name="lightest_pitch">#EFB6A4</color>
 
 </resources>
