edit button Ids for tuna pasta fragments

--- a/app/src/main/res/layout/fragment_admin_home_page.xml
+++ b/app/src/main/res/layout/fragment_admin_home_page.xml
@@ -34,11 +34,14 @@
 
     <ImageView
         android:id="@+id/adminHomePageIV"
+        android:layout_width="250dp"
+        android:layout_height="220dp"
         android:layout_below="@id/adminHomePageTitle"
-        android:layout_margin="20dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/admin_graphic" />
 
     <RelativeLayout
